# agent-engine-eval-demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  gemini.md  opentelemetry.env  paperbanana_manifest.yaml  pyproject.toml
docs/: pattern1_cloud_run.md  pattern2_agent_runtime.md  pattern3_byo_mcp.md  pov_cloud_run_vs_agent_runtime.md  pov_observability.md  pov_online_monitors.md  reporting_whitepaper.md  trends2insights_whitepaper.md
outputs/run_20260422_231737_ecf125/prompts/: planner.txt
paperbanana_inputs/: bigquery_sink.mermaid  bigquery_sink.txt  end_to_end_architecture.txt  eval_pipeline.txt  online_monitor_loop.txt  otel_tracing.txt  qualitative_insights.mermaid
paperbanana_outputs/batch_20260422_231301_736e44/: batch_checkpoint.json  batch_report.json
paperbanana_outputs/batch_20260422_231310_7f24ad/: batch_checkpoint.json  batch_report.json
paperbanana_outputs/batch_20260422_231310_7f24ad/run_20260422_231310_ea0524/: run_input.json
paperbanana_outputs/batch_20260422_231310_7f24ad/run_20260422_231520_bd6b57/: run_input.json
scripts/: generate_diagrams.py  register_agent_registry.sh  setup_agent_identity.sh  toolspec.json
src/: agent.py  api.py  deploy_agent.py  deploy_mcp_agent.py  eval_trends2insights.py  evaluate_and_export.py  live_dashboard.html  manage_online_monitors.py  mcp_agent.py  mock_ui.html  setup_online_evaluators.py  test_mcp_local.py  verify_online_monitors.py  whitepaper2_report.html
src/mcp_server/: Dockerfile  auth.py  mock_db.py  server.py
(+1 files in other folders)
