[project]
name = "agent-engine-eval-demo"
version = "0.1.0"
description = "Demonstration of Agent Engine + Custom Evals + BigQuery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform>=1.50.0",
    "google-cloud-bigquery>=3.20.1",
    "pandas>=2.0.0",
    "pandas-gbq>=0.22.0",
    "db-dtypes>=1.2.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0"
]
