[project]
name = "agent-engine-eval-demo"
version = "0.1.0"
description = "Demonstration of Agent Engine + Custom Evals + BigQuery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform[agent_engines,adk,evaluation]>=1.112.0",
    "google-adk>=1.0.0",
    "google-cloud-bigquery>=3.20.1",
    "pandas>=2.0.0",
    "pandas-gbq>=0.22.0",
    "db-dtypes>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
diagrams = [
    "paperbanana",
    "python-dotenv>=1.0.0",
]
